Remove dependency on the commons-io library